--- a/Tippspiel-App.csproj
+++ b/Tippspiel-App.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>TippspielApp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
 </Project>
